# davis-weather-station

./: CMakeLists.txt  LICENSE  README.md  arguments.cpp  arguments.hpp  configs.hpp  main.cpp  utils.cpp  utils.hpp
src/: arguments.cpp  arguments.hpp  configs.hpp  main.cpp  utils.cpp  utils.hpp
testing/: testing.txt
